remove unused fiefld
