# openapi/management-open-api.yaml
@@ -2019,7 +2019,6 @@ components:
       type: object
       required:
       - id
-      - task_id
       - name
       - namespace
       - typ
@@ -2052,13 +2051,6 @@ components:
           items:
             type: string
           description: List of namespace parts the tabular belongs to
-        task_id:
-          type: string
-          format: uuid
-          description: |-
-            Unique identifier of the deletion task
-
-            Can be used to reschedule the deletion
         typ:
           $ref: '#/components/schemas/TabularType'
           description: Type of the tabular
